@@ -80,6 +80,7 @@ defaultexcludes=org.apache.tools.ant.taskdefs.DefaultExcludes
 presetdef=org.apache.tools.ant.taskdefs.PreSetDef
 macrodef=org.apache.tools.ant.taskdefs.MacroDef
 nice=org.apache.tools.ant.taskdefs.Nice
+issigned=org.apache.tools.ant.taskdefs.IsSigned
 libraries=org.apache.tools.ant.taskdefs.repository.Libraries
 
 # optional tasks
