@@ -28,10 +28,11 @@ extensionSet=org.apache.tools.ant.taskdefs.optional.extension.ExtensionSet
 extension=org.apache.tools.ant.taskdefs.optional.extension.ExtensionAdapter
 libfileset=org.apache.tools.ant.taskdefs.optional.extension.LibFileSet
 selector=org.apache.tools.ant.types.selectors.SelectSelector
+signedselector=org.apache.tools.ant.types.selectors.SignedSelector
 zipfileset=org.apache.tools.ant.types.ZipFileSet
 scriptfilter=org.apache.tools.ant.types.optional.ScriptFilter
 propertyset=org.apache.tools.ant.types.PropertySet
 assertions=org.apache.tools.ant.types.Assertions
 concatfilter=org.apache.tools.ant.filters.ConcatFilter
 ispingable=org.apache.tools.ant.taskdefs.optional.condition.IsPingable
-mavenrepository=org.apache.tools.ant.taskdefs.repository.MavenRepository
+mavenrepository=org.apache.tools.ant.taskdefs.optional.repository.MavenRepository
